--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,26 @@
-.App {
+.title {
+  text-align: center;
+  padding-top: 15%;
+}
+
+.text {
+  color: blue;
   text-align: center;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
+.span-1 {
+  margin-left: 35%;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.span-2 {
+  margin-left: 20%;
 }
 
-.App-link {
-  color: #61dafb;
+.span-3 {
+  margin-left: 25%;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.Homepage-button {
+  margin-top: 6%;
+  margin-left: 27%;
 }
