--- a/src/App.css
+++ b/src/App.css
@@ -53,3 +53,34 @@
   justify-content: center;
   padding: 1em;
 }
+
+.profile-container {
+  display: flex;
+  flex-wrap: wrap;
+}
+.profile-name-pic {
+  justify-content: center;
+  padding: 1em;
+  margin: 1em;
+}
+.profile-info {
+  justify-content: center;
+  padding: 1em;
+  width: 60%;
+  border: 2px solid black;
+  border-radius: 25px;
+  margin: 1em;
+}
+.profile-pic {
+  width: 200px;
+  height: auto;
+}
+.reviews {
+  width: 80%;
+}
+.review-box {
+  border: 2px solid black;
+  border-radius: 25px;
+  padding: 1em;
+  width: 80%;
+}
